tests/fixtures/invalid/pow_str_int_none.py
# Cannot call pow() with Str, Int, None
x = pow("hello", 1, None)
